--- a/v1/timeline-api.yml
+++ b/v1/timeline-api.yml
@@ -16,7 +16,7 @@ info:
     contact:
         name: Team APEX (in Slack)
         url: https://projectronin.slack.com/archives/C03QLMWKE12
-    version: 0.0.10
+    version: 0.0.11
 externalDocs:
     description: Find out more about Timeline Service
     url: https://projectronin.atlassian.net/wiki/spaces/ENG/pages/1990393974/Timeline+Service
@@ -118,8 +118,8 @@ paths:
               description: ID of tenant patient and clinician belongs to
               required: true
               schema:
-                  type: string
-              example: apposnd
+                type: string
+                example: apposnd
         get:
             security:
                 - Seki: []
@@ -248,7 +248,7 @@ components:
                     example: 022628c4-d1ea-4ae3-9a6b-04c30ac4f903
                 tenantId:
                     type: string
-                    example: apposd
+                    example: apposnd
                 surveyResponseId:
                     type: integer
                     format: int64
@@ -286,7 +286,7 @@ components:
                     properties:
                         self:
                             type: string
-                            example: "/api/v1/tenants/apposd/patients/apposd-43211234/timeline/symptoms?start=2023-01-01T00:00:01Z&end=2023-03-01T00:00:01Z"
+                            example: "/api/v1/tenants/apposnd/patients/apposnd-43211234/timeline/symptoms?start=2023-01-01T00:00:01Z&end=2023-03-01T00:00:01Z"
                 data:
                     type: array
                     items:
@@ -296,7 +296,6 @@ components:
             type: object
             required:
                 - id
-                - externalId
                 - patientId
                 - tenantId
                 - alertState
@@ -307,11 +306,8 @@ components:
             properties:
                 id:
                     type: string
-                    format: uuid
+                    format: string
                     example: 935a9879-e8ce-4c86-9dcc-1ecdc9722283
-                externalId:
-                    type: string
-                    example: 4e3567c9-b445-4d58-b62e-a3d6b2df2fd8
                 patientId:
                     type: string
                     example: cd2d37a5-7967-46b0-b4e7-d91c61aea861
@@ -336,70 +332,8 @@ components:
                 reportedSymptoms:
                     type: array
                     items:
-                        "$ref": "#/components/schemas/SymptomReportSymptom"
-        SymptomReportSymptom:
-            type: object
-            required:
-                - id
-                - symptomReportId
-                - symptomId
-                - rowCreatedAt
-                - rowUpdatedAt
-                - symptom
-            properties:
-                id:
-                    type: string
-                    format: uuid
-                    example: 935a9879-e8ce-4c86-9dcc-1ecdc9722283
-                symptomReportId:
-                    type: string
-                    format: uuid
-                    example: '00544940-a455-441f-a926-6a2d5d5dad83'
-                symptomId:
-                    type: string
-                    format: uuid
-                    example: dc1005f7-d52f-4ef7-85ab-0e832a288aa9
-                rowCreatedAt:
-                    type: string
-                    format: date-time
-                    example: '2023-04-20T21:04:36Z'
-                rowUpdatedAt:
-                    type: string
-                    format: date-time
-                    example: '2023-04-20T21:04:36Z'
-                symptom:
-                    $ref: "#/components/schemas/Symptom"
-        Symptom:
-            type: object
-            required:
-                - id
-                - code
-                - displayName
-                - displayOrder
-                - rowCreatedAt
-                - rowUpdatedAt
-            properties:
-                id:
-                    type: string
-                    format: uuid
-                    example: 935a9879-e8ce-4c86-9dcc-1ecdc9722283
-                code:
-                    type: string
-                    example: fatigue
-                displayName:
-                    type: string
-                    example: Fatigue
-                displayOrder:
-                    type: integer
-                    example: 3
-                rowCreatedAt:
-                    type: string
-                    format: date-time
-                    example: '2023-04-20T21:04:36Z'
-                rowUpdatedAt:
-                    type: string
-                    format: date-time
-                    example: '2023-04-20T21:04:36Z'
+                        type: string
+                        example: Fatigue
         TypeMetadata:
             type: object
             required:
