--- a/v1/timeline-api.yml
+++ b/v1/timeline-api.yml
@@ -16,7 +16,7 @@ info:
     contact:
         name: Team APEX (in Slack)
         url: https://projectronin.slack.com/archives/C03QLMWKE12
-    version: 0.0.12
+    version: 0.0.13
 externalDocs:
     description: Find out more about Timeline Service
     url: https://projectronin.atlassian.net/wiki/spaces/ENG/pages/1990393974/Timeline+Service
@@ -381,6 +381,8 @@ components:
                     type: object
                     additionalProperties:
                         type: string
+                sequence:
+                    type: integer
                 dateRange:
                     $ref: "#/components/schemas/DateRange"
         DateRange:
