--- a/v1/timeline-api.yml
+++ b/v1/timeline-api.yml
@@ -16,7 +16,7 @@ info:
     contact:
         name: Team APEX (in Slack)
         url: https://projectronin.slack.com/archives/C03QLMWKE12
-    version: 0.0.13
+    version: 0.0.14
 externalDocs:
     description: Find out more about Timeline Service
     url: https://projectronin.atlassian.net/wiki/spaces/ENG/pages/1990393974/Timeline+Service
@@ -407,7 +407,7 @@ components:
                     type: string
                 date:
                     type: string
-                    format: date-time
+                    description: This will always be a date or a datetime
                     example: '2023-02-22T21:04:36Z'
                 values:
                     type: array
