--- a/v1/timeline-api.yml
+++ b/v1/timeline-api.yml
@@ -16,7 +16,7 @@ info:
     contact:
         name: Team APEX (in Slack)
         url: https://projectronin.slack.com/archives/C03QLMWKE12
-    version: 0.0.14
+    version: 0.0.15
 externalDocs:
     description: Find out more about Timeline Service
     url: https://projectronin.atlassian.net/wiki/spaces/ENG/pages/1990393974/Timeline+Service
@@ -27,6 +27,8 @@ tags:
       description: Generic timeline events of various types
     - name: Timeline Vitals
       description: timeline vitals events
+    - name: Timeline Labs
+      description: timeline labs events
     - name: Timeline Metadata
       description: Patient metadata pertaining to timeline
     - name: Mock Events (Local/Dev Only)
@@ -62,12 +64,12 @@ paths:
                         to tell you it does and you don’t have access
                 '500':
                     description: Unexpected error.
-    "/events/vitals":
+    "/events/observations":
         post:
             security:
                 -   Seki: [ ]
-            description: Event consumption of Vitals topic
-            operationId: createVitalsObservation
+            description: Event consumption of Observations topic - both Vitals and Labs are on this topic
+            operationId: createObservation
             tags:
                 - Mock Events (Local/Dev Only)
             requestBody:
@@ -257,6 +259,69 @@ paths:
                         to tell you it does and you don’t have access
                 '500':
                     description: Unexpected error.
+    "/tenants/{tenantId}/patients/{patientId}/timeline/labs":
+        parameters:
+            - name: patientId
+              in: path
+              description: ID of patient to query by
+              required: true
+              schema:
+                  type: string
+              example: 022628c4-d1ea-4ae3-9a6b-04c30ac4f903
+            - name: tenantId
+              in: path
+              description: ID of tenant patient and clinician belongs to
+              required: true
+              schema:
+                  type: string
+              example: apposnd
+        get:
+            security:
+                - Seki: []
+            tags:
+                - Timeline Labs
+            summary: Get labs timeline events
+            description: Get all lab events where (a) the timeline timestamp is between
+                the specified start & end timestamps, and (b) where the timeline event type
+                is `labs`.
+            operationId: getLabsTimelineEvents
+            parameters:
+                - name: start
+                  in: query
+                  description: UTC timestamp representing the (inclusive) starting point of
+                      the date range by which to query timeline events. If not provided, no lower limit will be defined.
+                  required: false
+                  schema:
+                      type: string
+                      format: date-time
+                      example: '2023-01-01T00:00:01Z'
+                - name: end
+                  in: query
+                  description: UTC timestamp representing the (exclusive) ending point of the
+                      date range by which to query timeline events. If not provided, no upper limit will be defined.
+                  required: false
+                  schema:
+                      type: string
+                      format: date-time
+                      example: '2024-01-01T00:00:01Z'
+            responses:
+                '200':
+                    description: Successful operation
+                    content:
+                        application/json:
+                            schema:
+                                type: array
+                                items:
+                                    "$ref": "#/components/schemas/Lab"
+                '401':
+                    description: Unauthorized, you didn’t send your token
+                '403':
+                    description: Forbidden, you sent your token and I have determined you unworthy
+                '404':
+                    description: Patient or tenant not found, either that resource doesn’t exist or I don’t want
+                        to tell you it does and you don’t have access
+                '500':
+                    description: Unexpected error.
 components:
     schemas:
         QuestionnaireResponseEventResponse:
@@ -382,6 +447,28 @@ components:
                         type: string
                 dateRange:
                     $ref: "#/components/schemas/DateRange"
+        LabPanelMetadata:
+            type: object
+            required:
+                - id
+                - displayName
+                - types
+                - dateRange
+            properties:
+                id:
+                    type: string
+                    description: id of the panel
+                types:
+                    description: The labs that should be included within this panel, where order matters
+                    type: array
+                    items:
+                        $ref: "#/components/schemas/TypeMetadata"
+                displayName:
+                    description: The panel name to group labs within. Any labs that do not fall into a panel will be in a 'Misc' panel, like magnesium
+                    type: string
+                    example: 'H&H'
+                dateRange:
+                    $ref: "#/components/schemas/DateRange"
         DateRange:
             type: object
             required:
@@ -434,13 +521,58 @@ components:
                                 example: 'N'
                             sourceType:
                                 type: string
+                                example: 'EHR Reported'
+                                description: If the source of the interpretation is given from a source or derived by Ronin
                             valueType:
                                 type: string
+                                example: 'Quantity'
+                                description: Type of value, for example quantity (with units and optional comparator), boolean, number, etc
+        Lab:
+            type: object
+            required:
+                - typeId
+                - date
+                - value
+            properties:
+                typeId:
+                    type: string
+                    description: >
+                        The lab type id of this lab, e.g. if it's glucose, sodium, etc. If more information is needed,
+                        the lab type id can be referenced against labs.types in the metadata response.
+                date:
+                    type: string
+                    description: This will always be a date or a datetime
+                    example: '2023-02-22T21:04:36Z'
+                value:
+                    type: string
+                    example: '23'
+                    description: Lab values can be many different types, but this will be a stringified value - it will still need to be concatenated with a comparator and units (from metadata), if present.
+                comparator:
+                    type: string
+                    example: '<='
+                low:
+                    type: string
+                    example: '60'
+                high:
+                    type: string
+                    example: '100'
+                interpretation:
+                    type: string
+                    example: 'N'
+                sourceType:
+                    type: string
+                    example: 'EHR Reported'
+                    description: If the source of the interpretation is given from a source or derived by Ronin
+                valueType:
+                    type: string
+                    example: 'Quantity'
+                    description: Type of value, for example quantity (with units and optional comparator), boolean, number, etc
         TimelineMetadataResponse:
             type: object
             required:
                 - symptoms
                 - vitals
+                - labs
             properties:
                 symptoms:
                     type: object
@@ -466,6 +598,18 @@ components:
                                 $ref: "#/components/schemas/TypeMetadata"
                         dateRange:
                             $ref: "#/components/schemas/DateRange"
+                labs:
+                    type: object
+                    required:
+                        - panels
+                        - dateRange
+                    properties:
+                        dateRange:
+                            $ref: "#/components/schemas/DateRange"
+                        panels:
+                            type: array
+                            items:
+                                $ref: "#/components/schemas/LabPanelMetadata"
 
     securitySchemes:
         Seki:
