--- a/v1/timeline-api.yml
+++ b/v1/timeline-api.yml
@@ -16,7 +16,7 @@ info:
     contact:
         name: Team APEX (in Slack)
         url: https://projectronin.slack.com/archives/C03QLMWKE12
-    version: 0.0.15
+    version: 0.0.16
 externalDocs:
     description: Find out more about Timeline Service
     url: https://projectronin.atlassian.net/wiki/spaces/ENG/pages/1990393974/Timeline+Service
@@ -492,41 +492,66 @@ components:
             properties:
                 id:
                     type: string
+                    description: >
+                        The id of the type of this vital. This can be cross referenced with the metadata
+                        response to find out metadata about the type (e.g. the units).
                 date:
                     type: string
                     description: This will always be a date or a datetime
                     example: '2023-02-22T21:04:36Z'
                 values:
                     type: array
+                    description: >
+                        The value(s) of this vital. Note that only blood pressure will ever have more than one value in
+                        which case the valueType can be used to know which blood pressure component the value is for (
+                        i.e. systolic vs diastolic).
                     items:
-                        type: object
-                        required:
-                            - value
-                            - low
-                            - high
-                            - interpretation
-                            - sourceType
-                        properties:
-                            value:
-                                type: string
-                                example: '88'
-                            low:
-                                type: string
-                                example: '60'
-                            high:
-                                type: string
-                                example: '100'
-                            interpretation:
-                                type: string
-                                example: 'N'
-                            sourceType:
-                                type: string
-                                example: 'EHR Reported'
-                                description: If the source of the interpretation is given from a source or derived by Ronin
-                            valueType:
-                                type: string
-                                example: 'Quantity'
-                                description: Type of value, for example quantity (with units and optional comparator), boolean, number, etc
+                        $ref: "#/components/schemas/VitalValue"
+        VitalValue:
+            type: object
+            required:
+                - value
+                - low
+                - high
+                - interpretation
+                - sourceType
+            properties:
+                value:
+                    type: string
+                    example: '88'
+                    description: The value of this vital sign.
+                comparator:
+                    type: string
+                    enum: [GREATER_THAN, GREATER_THAN_OR_EQUAL, LESS_THAN, LESS_THAN_OR_EQUAL]
+                    description: >
+                        A modifier on the value specifying that the value is relative to some given value
+                        rather than an exact value. For example, a value of `15` with a comparator of `GREATER_THAN`
+                        means that the value is `> 15`. Note that a comparator won't be provided when the value is an
+                        exact value, or in other words, there is no EQUALS comparator - it will just be null.
+                low:
+                    type: string
+                    example: '60'
+                    description: The lower boundary of the ref range, if there is one.
+                high:
+                    type: string
+                    example: '100'
+                    description: The upper boundary of the ref range, if there is one.
+                interpretation:
+                    type: string
+                    example: 'N'
+                    description: The interpretation of the ref range, if there is one. Either N, L, H, or empty.
+                sourceType:
+                    type: string
+                    example: 'EHR Reported'
+                    description: >
+                        If the source of the interpretation is given from a source or derived by Ronin. Note that this
+                        _is not_ an enum, but is a display oriented string that can be used as-is.
+                valueType:
+                    type: string
+                    example: 'systolic'
+                    description: >
+                        The type of this value. This is only used for blood pressure as other types of vitals only have
+                        one value. In the case of blood pressure, it will be either `systolic` or `diastolic`.
         Lab:
             type: object
             required:
